Patch by David Faure introducing a static deleter to fix crashes on exit.

BUG: 93675

svn path=/trunk/kdepim/; revision=375992